Вынес логику уведомений из класса бота и добавил возможность отслеживать рост цен на предметы

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,9 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 add_library(logger STATIC src/logger.cpp)
 target_include_directories(logger PUBLIC include)
 
+add_library(notifier STATIC src/notifier.cpp)
+target_include_directories(notifier PUBLIC include)
+
 add_library(marketbot_core STATIC src/marketbot.cpp)
 target_include_directories(marketbot_core PUBLIC include)
 
@@ -18,6 +21,7 @@ target_link_libraries(marketbot_core
     PUBLIC 
 	logger 
     PRIVATE 
+    	notifier
 	nlohmann_json::nlohmann_json 
 	Threads::Threads 
 	${CURL_LIBRARIES}
